--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.nirwashh.android.learnservices">
 
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,6 +25,7 @@
             </intent-filter>
         </activity>
         <service android:name=".services.SimpleService"/>
+        <service android:name=".services.ForegroundService"/>
     </application>
 
 </manifest>
