--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         </activity>
         <service android:name=".services.SimpleService"/>
         <service android:name=".services.ForegroundService"/>
+        <service android:name=".services.IntentService"/>
+        <service android:name=".services.MyJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
     </application>
 
 </manifest>
