--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.nirwashh.android.learnservices">
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
@@ -29,6 +30,8 @@
         <service android:name=".services.IntentService"/>
         <service android:name=".services.IntentServiceTwo"/>
         <service android:name=".services.MyJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
+        <service android:name=".services.MyJobIntentService"
             android:permission="android.permission.BIND_JOB_SERVICE"/>
     </application>
 
